--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "your-bot",
+  "name": "backup-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Your Name <your@email.com>",
   "license": "MIT",
   "dependencies": {
     "discord.js": "^12.3.1"
