--- a/.gitignore
+++ b/.gitignore
@@ -315,3 +315,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,visualstudiocode,vim,webstorm,windows,linux,macos
+
+credentials.json
