--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^12.3.1"
+    "discord.js": "^12.3.1",
+    "googleapis": "^39.2.0",
+    "got": "^11.8.2"
   }
 }
